# docs/swagger.json
@@ -1197,9 +1197,9 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Generates a PDF file of the resume using the selected template",
+                "description": "Generates and downloads a PDF file of the resume",
                 "produces": [
-                    "application/json"
+                    "application/pdf"
                 ],
                 "tags": [
                     "resumes"
@@ -1223,9 +1223,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "PDF file",
                         "schema": {
-                            "$ref": "#/definitions/internal_adapters_primary_http.ResumeResponse"
+                            "type": "file"
                         }
                     },
                     "401": {
